@@ -83,6 +83,8 @@ Improvements
 * SOLR-16924: RESTORECORE now sets the UpdateLog to ACTIVE state instead of requiring a separate
   REQUESTAPPLYUPDATES call in Collection restore.  (Julia Lamoine, David Smiley)
 
+* SOLR-16907: Reserve some 8.x security permission names to avoid confusion when upgrading (janhoy, Uwe Schindler)
+
 Optimizations
 ---------------------
 (No changes)
